[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/WriteSoundsPlayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/WrittenLogContainer.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="Theme" id=1]
VScrollBar/styles/grabber = SubResource( 2 )
VScrollBar/styles/grabber_highlight = SubResource( 3 )
VScrollBar/styles/grabber_pressed = SubResource( 4 )
VScrollBar/styles/scroll = SubResource( 5 )
VScrollBar/styles/scroll_focus = SubResource( 6 )

[node name="WrittenLogContainer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = SubResource( 1 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 600

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
margin_top = 600.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 4
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextWaitTimer" type="Timer" parent="."]
one_shot = true

[node name="TextClearTimer" type="Timer" parent="."]
one_shot = true

[node name="WritingTween" type="Tween" parent="."]

[node name="NewLineTween" type="Tween" parent="."]

[node name="WriteSoundsPlayer" parent="." instance=ExtResource( 1 )]

[connection signal="item_rect_changed" from="ScrollContainer/MarginContainer" to="." method="_on_MarginContainer_item_rect_changed"]
[connection signal="timeout" from="TextWaitTimer" to="." method="_on_TextWaitTimer_timeout"]
[connection signal="timeout" from="TextClearTimer" to="." method="_on_TextClearTimer_timeout"]
[connection signal="tween_all_completed" from="WritingTween" to="." method="_on_WritingTween_tween_all_completed"]
